<resources>
    <string name="app_name">Movie App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_message">Do you want to delete this movie?</string>
    <string name="dialog_title">Delete Movie</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="movie_popular">Popular</string>
    <string name="movie_upcoming">Up coming</string>
    <string name="movie_playing_now">Playing Now</string>
    <string name="something_wrong">oops… something went wrong</string>

    <string name="lorem_ipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="movie_detail_title">Detail</string>
    <string name="text_average_vote">Average Vote</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_genre">Count Vote</string>
    <string name="favorite">favorite_movie</string>
    <string name="setting">Setting</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>


    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when successful movie is added to favorit.</string>
    <string name="notify_channel_name">Movie Reminder</string>
    <string name="notify_content">Success add movie to favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">remove favorite</string>
    <string name="search_movie">search movie</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="page_is_being_created">Page is being created</string>

</resources>