<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:ignore="ContentDescription"
                tools:src="@android:color/black" />

            <TextView
                android:id="@+id/tv_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_release_date"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/iv_cover"
                app:layout_constraintTop_toTopOf="@id/iv_cover"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_alternates_italic"
                android:textColor="@color/black_100"
                app:layout_constraintStart_toStartOf="@id/tv_release_date_label"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date_label"
                tools:text="12/02/2022" />

            <TextView
                android:id="@+id/tv_genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_genre"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_release_date_label"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_100"
                app:layout_constraintStart_toStartOf="@id/tv_genre_label"
                app:layout_constraintTop_toBottomOf="@id/tv_genre_label"
                tools:text="Action" />

            <TextView
                android:id="@+id/tv_avg_vote_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_average_vote"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_genre_label"
                app:layout_constraintTop_toBottomOf="@id/tv_genre"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_avg_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_100"
                app:layout_constraintStart_toStartOf="@id/tv_avg_vote_label"
                app:layout_constraintTop_toBottomOf="@id/tv_avg_vote_label"
                tools:text="5.5" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cover"
                tools:text="@string/lorem_ipsum" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:backgroundTint="@color/purple_700"
                android:contentDescription="@string/favorite"
                android:fontFamily="@font/finger_paint"
                android:textColor="@color/white"
                android:text="@string/add_favorite"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_favorite_white"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/yellow_200"
                android:clickable="true"
                app:tint="@color/white"
                android:contentDescription="@string/remove_favorite"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_folder_delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
